sources += files(
    'configs/Constants.vala',
    'configs/Settings.vala',
    
    'controllers/AppController.vala',
    
    'views/AppView.vala',
    'views/CalendarView.vala',
    'views/TwelveGridView.vala',
    'views/DaysRow.vala',

    'enums/Day.vala',
    'enums/Month.vala',

    'widgets/HeaderBar.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)
