sources += files(
    'configs/Constants.vala',
    'configs/Settings.vala',
    
    'controllers/AppController.vala',
    
    'views/AppView.vala',
    'views/CalendarView.vala',
    'views/TwelveGridView.vala',
    'views/DaysRow.vala',
    'views/ColorSelector.vala',
    'views/BottomBar.vala',

    'enums/Day.vala',
    'enums/Month.vala',
    'enums/Color.vala',

    'widgets/HeaderBar.vala',
    
    'Application.vala',
    'Main.vala',
    'Window.vala'
)
